--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,98 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@800&family=Josefin+Sans:ital,wght@0,200;0,400;0,500;0,600;0,700;1,200&family=Montserrat:ital,wght@0,200;0,300;0,400;0,800;1,200;1,500;1,700&family=Poppins:ital,wght@0,200;0,300;0,600;0,700;0,800;1,100;1,400;1,500;1,700&family=Roboto:wght@400;500;700&display=swap');
+
+:root{
+ 
+  --white:#FFFFFF;
+  --blue:#284B63;
+  --green-blue:#3C6E71;
+  --gray:#343a40;
+  --light-gray:#495057;
+}
+body{
+  background-color: var(--gray);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body ,h1,h2,h3,h4,h5,h6,p{
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto' sans-serif;
+  
 }
+.container{
+  margin: 1rem;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  flex-wrap: wrap;
+  cursor: pointer;
+  justify-content: space-between;
+}
+.item{
+ background-color:var(--light-gray);
+  display: inline-block;
+  width: 10rem;
+  border-radius: 10px;
+  text-align: center;
+  align-self: stretch;
+  padding: 0px 0.5rem;
+  transition: all 0.2s linear;
+ 
+}
+.item p{
+  font-family: 'Roboto',sans-serif;
+  
+}
+
+
+.item:hover{
+  background-color: var(--blue);
+  color: var(--white);
+  box-shadow: 5px 5px 10px var(--green-blue);
+  transition: scale(1.1);
+}
+
+.emoji{
+    font-size: 250%;
+}
+
+nav{
+  background-color:var(--light-gray);
+  height: 2rem;
+  margin-bottom: 0.2rem;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.4);
+}
+nav h2{
+  display: inline;
+}
+nav a{
+  padding-top: 2px;
+  float: right;
+  text-decoration: none;
+  margin-right: 1rem;
+  color: black;
+}
+.search{
+  text-align: center;
+  margin: 1rem;
+  
+  }
+  
+  .search input{
+    align-items: center;
+    margin-bottom: 0.5rem;
+    height: 30px;
+    width: 300px;
+    border-radius: 5px;
+    background-color: var(--light-gray);
+    border: none;
+    outline: none;
+   
+    
+  }
+  .copied ,.copied:hover{
+    background-color:green;
+  }
+  .main img{
+    margin-left: 40%;
+    padding-top: 2rem;
+  }
